Exercise2_08/V2_headless/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskproject-svc
#  namespace: project
  labels:
    app: tspsvc
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: frontend-port
  - port: 8081
    protocol: TCP
    name: backend-port
  - port: 3306
    protocol: TCP
    name: mariadb-port
  clusterIP: None
  selector:
    app: tsp
